syntax = "proto3";

package employee.project;

option java_multiple_files = true;
option java_package = "org.bits.scalable.service.employee.grpc";
option java_outer_classname = "EmployeeProjectProto";

service EmployeeProject {
  // get employeed project details
  rpc getProjectDetails (GetProjectDetailsRequest) returns (GetProjectDetailsResponse) {}
}

message GetProjectDetailsRequest {
  string empId = 1;
}

message GetProjectDetailsResponse {
  oneof projectDetailsResp {
        ProjectDetailsResult resutl = 1;
		ErrorMessage error = 2;
  }
}

message ProjectDetailsResult {
   string empName = 1;
   string department = 2;
   repeated string projects = 3;
}

message ErrorMessage {
  string errorCode = 1;
  string message = 2;
}

